Added README for accuracy scripts

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__
 ga_hls/prop_ctrl.py
 ga_hls/temp.py
 ga_hls/z3check.py
+# Hidden file to sort folders on MacOS systems.
+.DS_Store
+*/.DS_Store
